Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/build/log/idf_py_stdout_output_5050
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/build/bootloader/esp-idf/esptool_py && /home/arturo/.espressif/python_env/idf5.3_py3.10_env/bin/python /home/arturo/.esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/build/bootloader/bootloader.bin
Bootloader binary size 0x6880 bytes. 0x780 bytes (7%) free.
[2/7] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/two_vl53l0x.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/two_vl53l0x.c.obj 
/home/arturo/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20240530/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.3.1-dirty\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/build/config -I/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main -I/home/arturo/.esp/esp-idf/components/newlib/platform_include -I/home/arturo/.esp/esp-idf/components/freertos/config/include -I/home/arturo/.esp/esp-idf/components/freertos/config/include/freertos -I/home/arturo/.esp/esp-idf/components/freertos/config/xtensa/include -I/home/arturo/.esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/arturo/.esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/arturo/.esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/arturo/.esp/esp-idf/components/freertos/esp_additions/include -I/home/arturo/.esp/esp-idf/components/esp_hw_support/include -I/home/arturo/.esp/esp-idf/components/esp_hw_support/include/soc -I/home/arturo/.esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/arturo/.esp/esp-idf/components/esp_hw_support/dma/include -I/home/arturo/.esp/esp-idf/components/esp_hw_support/ldo/include -I/home/arturo/.esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/arturo/.esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/arturo/.esp/esp-idf/components/heap/include -I/home/arturo/.esp/esp-idf/components/log/include -I/home/arturo/.esp/esp-idf/components/soc/include -I/home/arturo/.esp/esp-idf/components/soc/esp32 -I/home/arturo/.esp/esp-idf/components/soc/esp32/include -I/home/arturo/.esp/esp-idf/components/hal/platform_port/include -I/home/arturo/.esp/esp-idf/components/hal/esp32/include -I/home/arturo/.esp/esp-idf/components/hal/include -I/home/arturo/.esp/esp-idf/components/esp_rom/include -I/home/arturo/.esp/esp-idf/components/esp_rom/include/esp32 -I/home/arturo/.esp/esp-idf/components/esp_rom/esp32 -I/home/arturo/.esp/esp-idf/components/esp_common/include -I/home/arturo/.esp/esp-idf/components/esp_system/include -I/home/arturo/.esp/esp-idf/components/esp_system/port/soc -I/home/arturo/.esp/esp-idf/components/esp_system/port/include/private -I/home/arturo/.esp/esp-idf/components/xtensa/esp32/include -I/home/arturo/.esp/esp-idf/components/xtensa/include -I/home/arturo/.esp/esp-idf/components/xtensa/deprecated_include -I/home/arturo/.esp/esp-idf/components/lwip/include -I/home/arturo/.esp/esp-idf/components/lwip/include/apps -I/home/arturo/.esp/esp-idf/components/lwip/include/apps/sntp -I/home/arturo/.esp/esp-idf/components/lwip/lwip/src/include -I/home/arturo/.esp/esp-idf/components/lwip/port/include -I/home/arturo/.esp/esp-idf/components/lwip/port/freertos/include -I/home/arturo/.esp/esp-idf/components/lwip/port/esp32xx/include -I/home/arturo/.esp/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/arturo/.esp/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/arturo/.esp/esp-idf/components/driver/deprecated -I/home/arturo/.esp/esp-idf/components/driver/i2c/include -I/home/arturo/.esp/esp-idf/components/driver/touch_sensor/include -I/home/arturo/.esp/esp-idf/components/driver/twai/include -I/home/arturo/.esp/esp-idf/components/driver/touch_sensor/esp32/include -I/home/arturo/.esp/esp-idf/components/esp_pm/include -I/home/arturo/.esp/esp-idf/components/esp_ringbuf/include -I/home/arturo/.esp/esp-idf/components/esp_driver_gpio/include -I/home/arturo/.esp/esp-idf/components/esp_driver_pcnt/include -I/home/arturo/.esp/esp-idf/components/esp_driver_gptimer/include -I/home/arturo/.esp/esp-idf/components/esp_driver_spi/include -I/home/arturo/.esp/esp-idf/components/esp_driver_mcpwm/include -I/home/arturo/.esp/esp-idf/components/esp_driver_ana_cmpr/include -I/home/arturo/.esp/esp-idf/components/esp_driver_i2s/include -I/home/arturo/.esp/esp-idf/components/esp_driver_sdmmc/include -I/home/arturo/.esp/esp-idf/components/sdmmc/include -I/home/arturo/.esp/esp-idf/components/esp_driver_sdspi/include -I/home/arturo/.esp/esp-idf/components/esp_driver_sdio/include -I/home/arturo/.esp/esp-idf/components/esp_driver_dac/include -I/home/arturo/.esp/esp-idf/components/esp_driver_rmt/include -I/home/arturo/.esp/esp-idf/components/esp_driver_tsens/include -I/home/arturo/.esp/esp-idf/components/esp_driver_sdm/include -I/home/arturo/.esp/esp-idf/components/esp_driver_i2c/include -I/home/arturo/.esp/esp-idf/components/esp_driver_uart/include -I/home/arturo/.esp/esp-idf/components/vfs/include -I/home/arturo/.esp/esp-idf/components/esp_driver_ledc/include -I/home/arturo/.esp/esp-idf/components/esp_driver_parlio/include -I/home/arturo/.esp/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/components/core/inc -I/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/components/platform/inc -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x=. -fmacro-prefix-map=/home/arturo/.esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -Wno-error=format= -Wno-format -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/two_vl53l0x.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/two_vl53l0x.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/two_vl53l0x.c.obj -c /home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main/two_vl53l0x.c
/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main/two_vl53l0x.c: In function 'app_main':
/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main/two_vl53l0x.c:263:35: error: incompatible type for argument 1 of 'VL53L0X_DataInit'
  263 |         Status = VL53L0X_DataInit(device_2);
      |                                   ^~~~~~~~
      |                                   |
      |                                   VL53L0X_Dev_t
In file included from /home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main/two_vl53l0x.c:20:
/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/components/core/inc/vl53l0x_api.h:404:56: note: expected 'VL53L0X_DEV' {aka 'VL53L0X_Dev_t *'} but argument is of type 'VL53L0X_Dev_t'
  404 | VL53L0X_API VL53L0X_Error VL53L0X_DataInit(VL53L0X_DEV Dev);
      |                                            ~~~~~~~~~~~~^~~
/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main/two_vl53l0x.c:217:13: warning: unused variable 'i2c_dev_addr_1' [-Wunused-variable]
  217 |     uint8_t i2c_dev_addr_1 = 0x10;
      |             ^~~~~~~~~~~~~~
/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main/two_vl53l0x.c: At top level:
/home/arturo/Documents/Universidad/TFG/Software/ESP-IDF_Pruebas/VL53L0X/two_vl53l0x/main/two_vl53l0x.c:26:20: warning: 'TAG' defined but not used [-Wunused-variable]
   26 | static const char *TAG = "i2c-simple-example";
      |                    ^~~
ninja: build stopped: subcommand failed.
